made the following changes: fixed the mobile-first approach fixed the program schedule fixed the font for the headline fixed the navbar whitespace

--- a/about.css
+++ b/about.css
@@ -1,13 +1,17 @@
+@font-face { font-family: cocogoose; src: url(../fonts/Cocogoose_trial.otf); }
+
 body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
+  position: relative;
 }
 
 .navbar {
   flex-direction: column;
-  padding: 0;
-  margin: 0;
+  position: absolute;
+  top: 0;
+  z-index: 2;
 }
 
 .first-nav {
@@ -18,24 +22,13 @@ body {
   padding-top: 5px;
 }
 
-.campaign a {
-  margin-top: 2px;
-  border: 2px solid red;
-  color: red !important;
-}
-
 .first-nav a {
   color: #fff !important;
   font-size: 0.8rem;
 }
 
-.main-content {
-  margin-top: 5rem;
-}
-
 .second-nav {
-  background-color: #fff;
-  padding: 10px 10px;
+  background-color: transparent;
 }
 
 .second-nav a {
@@ -46,7 +39,7 @@ body {
   background-image: url("./assets/mobile_intro_bg.png");
   background-position: center center;
   z-index: 0;
-  padding-top: 130px;
+  padding-top: 30px;
   height: auto;
 }
 
@@ -61,17 +54,29 @@ body {
 }
 
 .about-tag {
+  font-family: cocogoose, sans-serif;
+  width: 80%;
   color: red;
-  margin-right: 10rem;
+  margin: 0 auto;
   text-align: center;
   font-size: 55px;
   font-weight: 900;
+  margin-top: 0 !important;
+}
+
+.history {
+  text-align: center;
+  width: 100%;
+  margin: 60px auto 0 auto;
 }
 
 .about-explanation {
+  text-align: center;
+  width: 100%;
+  margin: 0 auto;
   align-items: center;
+  line-height: 2rem;
   border: 4px solid rgb(255, 255, 255);
-  width: 631px;
   background-color: rgb(247, 247, 248);
 }
 
@@ -79,6 +84,14 @@ body {
   text-align: center;
   font-size: 20px;
   font-weight: 600;
+}
+
+.contact-footer {
+  margin-top: 20px;
+}
+
+.contact-email {
+  margin-bottom: 20px;
 }
 
 .intro-footer {
@@ -108,9 +121,9 @@ h1 {
 }
 
 .footer {
-  background-color: #272a31;
+  background-color: #fff;
   padding: 8vh 0;
-  color: white;
+  color: black;
 }
 
 hr {
@@ -146,34 +159,103 @@ hr {
 }
 
 .partners {
-  display: none;
+  display: block;
+  background-color: #272a31;
+  padding: 7vh 0;
+  width: 100%;
+}
+
+.partner-title {
+  text-align: center;
+  font-size: 24px;
+  color: #5f6063;
+}
+
+.partner-images img {
+  width: 100%;
+  object-fit: contain;
+  filter: grayscale(100%);
 }
 
 .partner-images {
-  display: none;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: 40px;
+  gap: 10px;
+  align-items: center;
 }
 
-@media only screen and (max-width: 768px) {
-  .about-greeting {
-    margin-top: 10px;
-  }
+.partner-col:nth-child(-1n + 3) {
+  grid-column: span 4;
+}
 
+.partner-col:nth-last-child(2) {
+  grid-row-start: 2;
+  grid-column: 3 / span 4;
+}
+
+.partner-col:nth-last-child(1) {
+  grid-row-start: 2;
+  grid-column: 7 / span 4;
+}
+
+.navbar-toggler {
+  display: block;
+  font-size: 2em;
+  text-align: left;
+  outline: none !important;
+  box-shadow: none !important;
+  padding: 0;
+}
+
+.closeIcon {
+  display: none;
+  width: 12px;
+  height: 12px;
+  size: 30;
+  margin: 15px;
+  margin-bottom: 50px;
+}
+
+.menuItem {
+  font-style: medium;
+  font-size: 24px;
+  background-color: #fff;
+  margin-bottom: 50px;
+  position: relative;
+  width: 100%;
+  display: block;
+  z-index: 3;
+}
+
+.menu {
+  background-color: #fff;
+  z-index: 3;
+}
+
+
+/* }
+Desktop */
+@media only screen and (min-width: 768px) {
   body {
     padding: 5px;
     overflow-x: hidden;
-  }
-
-  .navbar-toggler {
-    display: block;
-    font-size: 2em;
-    text-align: left;
-    outline: none !important;
-    box-shadow: none !important;
-    padding: 0;
+    position: relative;
   }
 
   .navbar {
     width: 100%;
+    padding: 0;
+    margin: 0;
+    position: relative;
+  }
+
+  .first-nav a {
+    background-color: transparent;
+  }
+
+  .second-nav {
+    background-color: #fff;
   }
 
   .intro-explanation {
@@ -184,8 +266,8 @@ hr {
     display: none;
   }
 
-  .main-content {
-    margin-top: 0;
+  .fa-archway {
+    color: black !important;
   }
 
   .introduction {
@@ -195,9 +277,9 @@ hr {
   }
 
   .campaign a {
-    outline: none;
-    border: none !important;
-    color: #5f6063 !important;
+    margin-top: 2px;
+    border: 3px solid red !important;
+    color: #5f6063;
   }
 
   .program {
@@ -213,23 +295,21 @@ hr {
     width: 100%;
   }
 
-  .closeIcon {
-    display: none;
-    width: 12px;
-    height: 12px;
-    size: 30;
-    margin: 15px;
-    margin-bottom: 50px;
+  .menu {
+    background-color: transparent;
   }
 
   .menuItem {
-    font-style: medium;
-    font-size: 24px;
-    color: #edecff;
-    margin-bottom: 50px;
-    position: relative;
-    width: 100%;
-    display: block;
+    margin-bottom: 0;
+  }
+
+  .nav-item {
+    color: #fff !important;
+  }
+
+  .nav-link a {
+    display: flex;
+    justify-content: space-between;
   }
 
   .menuItem .fa-chevron-right {
@@ -243,50 +323,32 @@ hr {
     transform: translateY(0);
   }
 
-  .partners {
-    display: block;
-    background-color: #272a31;
-    padding: 7vh 0;
-    width: 100%;
-  }
-
-  .partner-title {
+  .underline {
+    background-color: red;
+    height: 2px !important;
+    width: 40px !important;
+    align-self: center;
     text-align: center;
-    font-size: 24px;
-    color: #5f6063;
+    margin-top: 0;
   }
 
-  .partner-images img {
-    width: 100%;
-    object-fit: contain;
-    filter: grayscale(100%);
-  }
-
-  .footer {
-    background-color: #fff;
-    padding: 8vh 0;
-    color: black;
+  .partners {
+    display: none;
   }
 
   .partner-images {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: 40px;
-    gap: 10px;
-    align-items: center;
+    display: none;
   }
 
-  .partner-col:nth-child(-1n + 3) {
-    grid-column: span 4;
+  .footer {
+    background-color: #272a31 !important;
+    padding: 8vh 0;
+    color: white !important;
   }
 
-  .partner-col:nth-last-child(2) {
-    grid-row-start: 2;
-    grid-column: 3 / span 4;
-  }
-
-  .partner-col:nth-last-child(1) {
-    grid-row-start: 2;
-    grid-column: 7 / span 4;
+  .second-nav a {
+    color: #5f6063;
+    margin: 0 20px;
+    font-size: 16px;
   }
 }
